[package]
name = "stabilized_vehicle"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[features]
default = ["libm",  "rpm_filters", "madgwick_filter"]
#default = ["libm",  "rpm_filters", "mahony_filter"]
madgwick_filter = []
mahony_filter = []
complementary_filter = []
rpm_filters = []
std = ["vector-quaternion-matrix/std","filters/std", "imu-sensors/std"]
no_align = ["vector-quaternion-matrix/no_align", "filters/no_align", "imu-sensors/no_align"]
simd = ["vector-quaternion-matrix/simd", "filters/simd", "imu-sensors/simd"]
libm = ["num-traits/libm", "vector-quaternion-matrix/libm","filters/libm", "imu-sensors/libm"]

[build-dependencies]
rustc_version = "0.4.1"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
cfg-if = "1.0"

vector-quaternion-matrix = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix", default-features = false}
imu-sensors = { git = "https://github.com/martinbudden/crate-imu-sensors", default-features = false}
sensor-fusion = { git = "https://github.com/martinbudden/crate-sensor-fusion", default-features = false}
filters = { git = "https://github.com/martinbudden/crate-filters",default-features = false}
pid-controller = { git = "https://github.com/martinbudden/crate-pid-controller" }
motor-mixers = { git = "https://github.com/martinbudden/crate-motor-mixers" }

# For easy flash access on the RP2040
embedded-storage = "0.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.0", features = ["embedded-io"] }

[dev-dependencies]
# assert_float_eq = "1.2.0" # used for test

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
