[package]
name = "stabilized_vehicle"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-stabilized-vehicle"
description = "A vector, quaternion, and matrix library targeted at embedded systems and robotics."
keywords = ["3D", "vector", "quaternion", "matrix", "Euler angles", "no-std"]
categories = [
    "Embedded development",
    "Mathematics",
    "No standard library",
    "Robotics",
    "Science",
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[features]
default = ["libm",  "rpm_filters", "madgwick_filter"]
#default = ["libm",  "rpm_filters", "mahony_filter"]
madgwick_filter = []
mahony_filter = []
complementary_filter = []
rpm_filters = []
std = ["vector-quaternion-matrix/std","filters/std"]
no_align = ["vector-quaternion-matrix/no_align", "filters/no_align"]
simd = ["vector-quaternion-matrix/simd", "filters/simd"]
libm = ["num-traits/libm", "vector-quaternion-matrix/libm","filters/libm"]

[build-dependencies]
rustc_version = "0.4.1"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1" 

vector-quaternion-matrix = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix", default-features = false}
sensor-fusion = { git = "https://github.com/martinbudden/crate-sensor-fusion", default-features = false}
filters = { git = "https://github.com/martinbudden/crate-filters",default-features = false}
pid-controller = { git = "https://github.com/martinbudden/crate-pid-controller" }
motor-mixers = { git = "https://github.com/martinbudden/crate-motor-mixers" }

# For easy flash access on the RP2040
embedded-storage = "0.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.0", features = ["embedded-io"] }

[dev-dependencies]
approx = { version = "0.5", default-features = false }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "sv_bench"
harness = false
